tests/compile_errors/as-bang-runtime-error.buzz
// Cast to `str` failed
import print from "buzz:std";

test "as! raises a runtime error on failed cast" {
    final anything: any = 12;
    final casted = anything as! str;

    print(casted);
}
